[gd_scene load_steps=24 format=3 uid="uid://cirivl3wn7ipl"]

[ext_resource type="AudioStream" uid="uid://bdyspkd0krq5t" path="res://source/assets/sounds/ambience/drones/low_drone.ogg" id="3_qtdgl"]
[ext_resource type="Script" path="res://source/main.gd" id="4"]
[ext_resource type="AudioStream" uid="uid://d157c1hdub448" path="res://source/assets/sounds/horror_sounds/play_sound.ogg" id="5_q5r8v"]
[ext_resource type="Shader" path="res://source/blackout_blur.gdshader" id="5_r5cia"]
[ext_resource type="Material" uid="uid://b1lrpiy2i5dmj" path="res://source/assets/shaders/zoom_shader_mat.tres" id="6_d62xx"]
[ext_resource type="Material" uid="uid://c3rubs6mqbfk4" path="res://source/assets/shaders/vignette_shader_mat.tres" id="6_kj3sd"]
[ext_resource type="Material" uid="uid://faq68tr6wo04" path="res://source/assets/shaders/retro_shader_mat.tres" id="7_768vo"]
[ext_resource type="AudioStream" uid="uid://brkutqft4kt3q" path="res://source/assets/sounds/misc/heartbeat.ogg" id="8"]
[ext_resource type="Material" uid="uid://8ry3t1ttx3f4" path="res://source/assets/shaders/chrom_abb_shader_mat.tres" id="8_dshu8"]
[ext_resource type="AudioStream" uid="uid://cx6oocqccfcc0" path="res://source/assets/sounds/ambience/general/drip_ambience.ogg" id="10"]
[ext_resource type="FontFile" uid="uid://b3dns32ajwdof" path="res://source/assets/fonts/IMFellEnglishSC-Regular.ttf" id="10_8mkgv"]
[ext_resource type="PackedScene" uid="uid://jeo2tjikugy2" path="res://source/assets/ui/ui.tscn" id="11_kc1x7"]
[ext_resource type="PackedScene" uid="uid://dh2pvbfrukany" path="res://source/assets/ui/cursor.tscn" id="12_7deiu"]
[ext_resource type="Shader" path="res://source/sky.gdshader" id="12_m4t6m"]

[sub_resource type="Animation" id="1"]
length = 0.001

[sub_resource type="Animation" id="2"]
resource_name = "chromatic_abberation"

[sub_resource type="Animation" id="3"]
resource_name = "heartbeat"
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:anim_chrom_abb_offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.32, 0.56, 0.77),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 10.0, 4.0, 7.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:anim_vignette_softness")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.32, 0.56, 0.77),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.65, 0.8, 0.7, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_211kc"]
_data = {
"RESET": SubResource("1"),
"chromatic_abberation": SubResource("2"),
"heartbeat": SubResource("3")
}

[sub_resource type="GDScript" id="GDScript_7dmx0"]
script/source = "extends Control


"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xy6ro"]
shader = ExtResource("5_r5cia")
shader_parameter/blurAmount = 0.0
shader_parameter/colorScale = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ycwu"]
shader = ExtResource("12_m4t6m")

[sub_resource type="Sky" id="Sky_ga56u"]
sky_material = SubResource("ShaderMaterial_1ycwu")

[sub_resource type="Environment" id="4"]
background_mode = 1
sky = SubResource("Sky_ga56u")
ambient_light_source = 2
ambient_light_color = Color(0.29219, 0.29219, 0.29219, 1)
adjustment_enabled = true
adjustment_contrast = 1.05

[node name="main" type="Node"]
script = ExtResource("4")
anim_vignette_softness = 1.0
debug_no_title_screen = true
debug_no_prologue = true

[node name="effects_player" type="AnimationPlayer" parent="."]
root_node = NodePath("../post_processing")
libraries = {
"": SubResource("AnimationLibrary_211kc")
}

[node name="drone_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qtdgl")
volume_db = -3.0
bus = &"Global"

[node name="heartbeat_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8")
volume_db = -30.0
autoplay = true

[node name="drip_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10")
volume_db = -16.0
bus = &"Global"

[node name="play_game_sound_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_q5r8v")
volume_db = 5.0

[node name="post_processing" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_7dmx0")

[node name="blackout_blur" type="ColorRect" parent="post_processing"]
material = SubResource("ShaderMaterial_xy6ro")
custom_minimum_size = Vector2(512, 288)
layout_mode = 0

[node name="back_buf_copy4" type="BackBufferCopy" parent="post_processing"]
copy_mode = 2

[node name="vignette" type="ColorRect" parent="post_processing"]
material = ExtResource("6_kj3sd")
custom_minimum_size = Vector2(512, 288)
layout_mode = 0
offset_right = 512.0
offset_bottom = 288.0

[node name="back_buf_copy" type="BackBufferCopy" parent="post_processing"]
copy_mode = 2

[node name="zoom" type="ColorRect" parent="post_processing"]
material = ExtResource("6_d62xx")
custom_minimum_size = Vector2(512, 288)
layout_mode = 0
offset_right = 512.0
offset_bottom = 288.0

[node name="back_buf_copy3" type="BackBufferCopy" parent="post_processing"]
copy_mode = 2

[node name="chromatic_abberation" type="ColorRect" parent="post_processing"]
visible = false
material = ExtResource("8_dshu8")
custom_minimum_size = Vector2(512, 288)
layout_mode = 0
offset_right = 512.0
offset_bottom = 288.0

[node name="back_buf_copy1" type="BackBufferCopy" parent="post_processing"]
visible = false
copy_mode = 2

[node name="retro_shader" type="ColorRect" parent="post_processing"]
material = ExtResource("7_768vo")
custom_minimum_size = Vector2(512, 288)
layout_mode = 0
offset_right = 512.0
offset_bottom = 288.0

[node name="ui" parent="." instance=ExtResource("11_kc1x7")]

[node name="world_environment" type="WorldEnvironment" parent="."]
environment = SubResource("4")

[node name="Label" type="Label" parent="."]
offset_left = 2.0
offset_top = 1.0
offset_right = 48.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("10_8mkgv")
theme_override_font_sizes/font_size = 16
text = "FPS:"

[node name="timer_label" type="Label" parent="."]
visible = false
offset_left = 87.0
offset_top = 1.0
offset_right = 164.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("10_8mkgv")
theme_override_font_sizes/font_size = 16
text = "Time Left:"

[node name="cursor" parent="." instance=ExtResource("12_7deiu")]
process_mode = 3
top_level = true
